add feat message read and notification
